--- a/style.css
+++ b/style.css
@@ -18,13 +18,13 @@ body {
 
 /* Logo */
 .logo {
-    width: 200px; /* Velikost loga */
+    width: 150px; /* Nastavení velikosti loga */
     height: auto;
 }
 
 /* Nadpis */
 .faq-header {
-    background-color: #FFA500; /* Oranžová barva */
+    background-color: #007A78; /* Petrolejová barva */
     color: white; /* Bílý text */
     font-size: 28px;
     font-weight: bold;
@@ -59,5 +59,10 @@ body {
 .faq-answer {
     display: none;
     padding: 15px;
-    color:
+    color: black;
+    font-size: 20px;
+    background-color: white;
+    border-radius: 5px;
+    margin-top: 10px;
+}
 
